feat: add MCP mode with WebSocket bridge for remote screenshots
- Add toggle via context menu on extension icon
- Keepalive alarm to prevent service worker sleep
- Auto-disable after 10 min inactivity
- Visual badge showing connection status
- Remove activeTab, use host_permissions for programmatic capture

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,11 +5,18 @@
   "description": "Lightning-fast screenshots with clipboard path for Claude",
 
   "permissions": [
-    "activeTab",
+    "tabs",
     "scripting",
     "downloads",
     "storage",
-    "clipboardWrite"
+    "clipboardWrite",
+    "nativeMessaging",
+    "contextMenus",
+    "alarms"
+  ],
+
+  "host_permissions": [
+    "<all_urls>"
   ],
 
   "background": {
