--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -1,20 +1,28 @@
 {
   "name": "quick-screenshot-mcp",
   "version": "0.1.0",
-  "description": "MCP server for Quick Screenshot extension",
+  "description": "MCP server for Quick Screenshot Chrome extension - allows Claude Code to trigger screenshots",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "bin": {
-    "quick-screenshot-mcp": "dist/index.js"
+    "quick-screenshot-mcp": "dist/cli.js"
   },
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "start": "node dist/index.js"
+    "start": "node dist/cli.js"
   },
+  "keywords": [
+    "mcp",
+    "claude",
+    "screenshot",
+    "chrome-extension"
+  ],
+  "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
